--- a/Front-end/_Imports.razor
+++ b/Front-end/_Imports.razor
@@ -5,6 +5,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.AspNetCore.Components.WebAssembly
 @using Microsoft.JSInterop
 @using Front_end
 @using Front_end.Layout
