<feat>: adição do header/footer e ajustes
- ajustes na responsividade e visuais.

--- a/Front-end/Pages/Recuperar_senha.razor
+++ b/Front-end/Pages/Recuperar_senha.razor
@@ -3,7 +3,9 @@
 
 <PageTitle>Recuperar Senha</PageTitle>
 
-<div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+<Header />
+
+<div style="display: flex; justify-content: center; align-items: center; height: 100vh; margin-bottom: 9.375rem;">
     <div class="container-form bg-white border-radius-20">
     
         <h1 class="display-5 weight-700 pb-4">Recuperar senha</h1>
@@ -41,6 +43,8 @@
     
     </div>
 </div>
+
+<Footer />
 
 @code{
     public class User
