<fix>: alguns ajustes nos arquivos

--- a/Front-end/Pages/Home.razor
+++ b/Front-end/Pages/Home.razor
@@ -8,7 +8,7 @@
 
     <div style="display: flex; justify-content: space-between; align-items: center; padding-left: 6.188rem; padding-right: 6.188rem;">
     
-        <div style="width: 508px;" class="me-5">
+        <div class="me-5">
     
             <h1 style="color:var(--blue-ufersa); font-size: 3.75rem; width: 90%;" class="weight-700">Lorem Ipsum is simply dummy text.</h1>
     
@@ -30,7 +30,7 @@
  
     <div style="display: flex; justify-content: space-between; align-items: center; align-items: center; background-color: var(--blue-ufersa); padding-right: 6.188rem; border-radius: 20px 20px 0px 0px;">
 
-        <img style="height: 450px; text-align: left;" src="..\css\images\logo-home.png" alt="Logo tela home">
+        <img src="..\css\images\logo-clara.png" alt="Logo tela home">
 
         <div style="padding-left: 60px">
             <h1 style="color:var(--white); font-size: 3.75rem; width: 90%;" class="weight-700">Lorem Ipsum is simply dummy text.</h1>
