--- a/Front-end/wwwroot/css/app.css
+++ b/Front-end/wwwroot/css/app.css
@@ -3,6 +3,7 @@
 :root{
     --black-color: #1E1E1E;
     --blue-ufersa: #243E64;
+    --verde-ufersa: #99CC33;
     --white: #FAF9F6;
     --border-color: #000000;
     --cinza-escuro: #C3C3C3;
@@ -238,4 +239,12 @@ code {
 
 .gray-underline-black:hover{
     color: var(--black-color);
+}
+
+.text-gray{
+    color: var(--cinza-escuro);
+}
+
+.text-green{
+    color: var(--verde-ufersa);
 }
