<fix>: Navegação para a tela de cadastro

--- a/Front-end/Pages/Home.razor
+++ b/Front-end/Pages/Home.razor
@@ -15,7 +15,7 @@
             <p style="color:var(--blue-ufersa);" class="weight-500 paragraph-size py-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown.</p>
     
             <div class="d-flex gap-4">
-                <a href="/registrar" style="width: 191px;" class=" btn-secondary weight-700 button-size border-radius-30 a-button">Cadastrar</a>
+                <a href="/cadastrar" style="width: 191px;" class=" btn-secondary weight-700 button-size border-radius-30 a-button">Cadastrar</a>
                 <a href="/entrar" style="width: 191px;" class=" btn-primary weight-700 button-size border-radius-30 a-button">Entrar</a>
             </div>
     
