--- a/Front-end/Pages/Recuperar_senha.razor
+++ b/Front-end/Pages/Recuperar_senha.razor
@@ -34,7 +34,7 @@
         </div>
     
         <div class="d-grid gap-2 py-2">
-            <a href="/registrar" class="btn btn-secondary weight-700 button-size border-radius-30" style="display: flex; align-items: center; justify-content: center; height: 4rem; align-items: center;">Cadastre-se</a>
+            <a href="/cadastrar" class="btn btn-secondary weight-700 button-size border-radius-30" style="display: flex; align-items: center; justify-content: center; height: 4rem; align-items: center;">Cadastre-se</a>
         </div>
     
         <div class="d-grid gap-2 py-2">
