--- a/Front-end/Pages/Entrar.razor
+++ b/Front-end/Pages/Entrar.razor
@@ -45,7 +45,7 @@
         <p class="paragraph-size weight-500">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
     
         <div class="d-grid gap-2 py-2">
-            <a href="/registrar" class="btn btn-secondary weight-700 button-size border-radius-30 a-button">Cadastre-se Agora</a>
+            <a href="/cadastrar" class="btn btn-secondary weight-700 button-size border-radius-30 a-button">Cadastre-se Agora</a>
         </div>
     
     </div>
