<refactor>: alterações em variáveis/navegação

--- a/Front-end/Layout/Header.razor
+++ b/Front-end/Layout/Header.razor
@@ -24,7 +24,7 @@
     header{
         width: 100%;
         display: flex;
-        align-items: center;
+        align-items: first baseline;
         justify-content: space-between;
     }
 
