--- a/Front-end/Pages/Cadastrar.razor
+++ b/Front-end/Pages/Cadastrar.razor
@@ -2,7 +2,7 @@
 @using System.ComponentModel.DataAnnotations
 @inject NavigationManager Navigation
 
-<PageTitle>Entrar</PageTitle>
+<PageTitle>Cadastrar</PageTitle>
 
 <Header />
 
@@ -49,7 +49,7 @@
                 <p class="paragraph-size weight-500 py-4" style="text-align: center;">Ao clicar em Aceite e cadastre-se, você aceita os <b style="text-decoration: underline;">Termos de Uso</b> e as <b style="text-decoration: underline;">Políticas de Privacidade</b></p>
         
                 <div class="d-grid gap-2 py-2">
-                    <button type="submit" class="btn btn-primary weight-700 button-size border-radius-30" style="height: 4rem;">Aceite e cadastre-se</button>
+                    <button type="submit" class="btn btn-primary weight-700 px24 border-radius-30" style="height: 4rem;">Aceite e cadastre-se</button>
                 </div>
         
             </EditForm>
@@ -75,7 +75,7 @@
                 </div>
         
                 <div class="d-grid gap-2 py-2">
-                    <button type="submit" href="/inicio" class="btn btn-primary weight-700 button-size border-radius-30" style="height: 4rem;">Continuar</button>
+                    <button type="submit" href="/inicio" class="btn btn-primary weight-700 px24 border-radius-30" style="height: 4rem;">Continuar</button>
                 </div>
         
             </EditForm>
