--- a/Front-end/Pages/Recuperar_senha.razor
+++ b/Front-end/Pages/Recuperar_senha.razor
@@ -22,7 +22,7 @@
         <p class="paragraph-size weight-500 py-2">Enviaremos um código de verificação a este e-mail, caso seja associado a uma conta ASA.</p>
 
             <div class="d-grid gap-2 py-4">
-                <button type="submit" class="btn btn-primary weight-700 button-size border-radius-30" style="height: 4rem;">Avançar</button>
+                <button type="submit" class="btn btn-primary weight-700 px24 border-radius-30" style="height: 4rem;">Avançar</button>
             </div>
     
         </EditForm>
@@ -34,11 +34,11 @@
         </div>
     
         <div class="d-grid gap-2 py-2">
-            <a href="/cadastrar" class="btn btn-secondary weight-700 button-size border-radius-30" style="display: flex; align-items: center; justify-content: center; height: 4rem; align-items: center;">Cadastre-se</a>
+            <a href="/cadastrar" class="btn btn-secondary weight-700 px24 border-radius-30" style="display: flex; align-items: center; justify-content: center; height: 4rem; align-items: center;">Cadastre-se</a>
         </div>
     
         <div class="d-grid gap-2 py-2">
-            <a href="/entrar" class="weight-700 button-size border-radius-30 black underline gray-underline-black" style="display: flex; align-items: center; justify-content: center; height: 4rem; align-items: center;">Entrar</a>
+            <a href="/entrar" class="weight-700 px24 border-radius-30 black underline gray-underline-black" style="display: flex; align-items: center; justify-content: center; height: 4rem; align-items: center;">Entrar</a>
         </div>
     
     </div>
