--- a/Front-end/Pages/Entrar.razor
+++ b/Front-end/Pages/Entrar.razor
@@ -1,5 +1,6 @@
 @page "/entrar"
 @using System.ComponentModel.DataAnnotations
+@inject NavigationManager Navigation
 
 <PageTitle>Entrar</PageTitle>
 
@@ -31,7 +32,7 @@
             <a href="/recuperar-senha" class="weight-700 paragraph-size underline">Esqueceu sua senha?</a>
     
             <div class="d-grid gap-2 py-5">
-                <button type="submit" class="btn btn-primary weight-700 button-size border-radius-30" style="height: 4rem;">Entrar</button>
+                <button type="submit" class="btn btn-primary weight-700 px24 border-radius-30" style="height: 4rem;">Entrar</button>
             </div>
     
         </EditForm>
@@ -45,7 +46,7 @@
         <p class="paragraph-size weight-500">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
     
         <div class="d-grid gap-2 py-2">
-            <a href="/cadastrar" class="btn btn-secondary weight-700 button-size border-radius-30 a-button">Cadastre-se Agora</a>
+            <a href="/cadastrar" class="btn btn-secondary weight-700 px24 border-radius-30 a-button">Cadastre-se Agora</a>
         </div>
     
     </div>
@@ -69,7 +70,7 @@
     private void HandleValidSubmit()
     {
         submitted = true;
-        // Lógica para lidar com os dados do formulário
+        Navigation.NavigateTo("/inicio");
     }
 
     private bool isPasswordVisible = false;
