--- a/Front-end/Pages/Inicio.razor
+++ b/Front-end/Pages/Inicio.razor
@@ -11,8 +11,21 @@
 
                 <div>
 
-                    <div style="width: 42.5rem; height: 23.5rem; background: linear-gradient(109.09deg, #243E64 40.1%, #3E5C89 100%); border-radius: 10px; box-shadow: 0px 4px 4px 0px #00000040;">
+                    <div style="width: 42.5rem; height: 23.5rem; background: linear-gradient(109.09deg, #243E64 40.1%, #3E5C89 100%); border-radius: 10px; box-shadow: 0px 4px 4px 0px #00000040; display: flex; position: relative;">
 
+                        <div class="blue-div"></div>
+
+                        <div class="content-div" style="padding: 15px 20px; width: 23.375rem;">
+                            <p class="paragraph-size weight-700" style="color: var(--black-gray);">UFERSA</p>
+                            <h1 class="px46" style="color: var(--white);">Lorem Ipsum is simply </h1>
+                            <p class="paragraph-size weight-500" style="color: var(--white); width: 90%;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum.</p>
+
+                            <div class="d-grid gap-2 py-2">
+                                <a href="/inicio" class="btn btn-secondary weight-700 border-radius-30 paragraph-size" style="display: flex; align-items: center; justify-content: center; height: 3rem; align-items: center; width: 50%">Agendar</a>
+                            </div>
+                        </div>
+
+                        <img style="position: absolute; right: -1.7rem; bottom: 1.688rem; height: 100%; z-index: 2; transform: scale(1.15);" src="..\\css\\images\\mulher-inicio.png">
 
                     </div>
 
