--- a/Front-end/wwwroot/css/app.css
+++ b/Front-end/wwwroot/css/app.css
@@ -207,6 +207,10 @@ code {
     font-size: 1.5em;
 }
 
+.px46{
+    font-size: 2.875em;
+}
+
 .custom-input{
     height: 3.5rem;
     border-width: 3px;
